# QoE

./: .coverage  .dockerignore  .gitignore  AMPLIFY_QUICK_SETUP.md  AMPLIFY_STEP_BY_STEP.md  AUTOMATIC_MAPPING_ENHANCEMENT.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_OPTIONS.md  AWS_FREE_DEPLOYMENT_GUIDE.md  AWS_SSH_FIX.md  CHATGPT_GL_GENERATOR_PROMPT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.backend  EC2_SETUP_COMMANDS.md  FIX_MIXED_CONTENT_HTTPS.md  GITHUB_PUSH_GUIDE.md  GL_Databook_20260107_230015.xlsx  GL_Databook_20260107_230704.xlsx  GL_Databook_20260107_231231.xlsx  GL_Databook_20260109_224756.xlsx  GL_Databook_20260115_001149.xlsx  GL_Databook_20260115_002126.xlsx  PHASE1_CAPABILITY_ANALYSIS.md  PHASE1_TESTING_GUIDE.md  QUICK_DEPLOY.md  QUICK_GITHUB_PUSH.md  REACT_SETUP.md  README.md  SYSTEM_VALIDATION_EXPLANATION.md  apprunner.yaml  coverage.xml  create_sample_gl.py  database_init.py  generate_messy_gl.py  pyproject.toml  pytest.ini  requirements.txt
.streamlit/: config.toml
app/: __init__.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
output/: GL_Databook_20260118_012117.xlsx  GL_Databook_20260118_012315.xlsx  GL_Databook_20260118_121004.xlsx  GL_Databook_20260118_123609.xlsx  GL_Databook_20260118_124321.xlsx  GL_Databook_20260118_230023.xlsx  GL_Databook_20260118_235319.xlsx  GL_Databook_20260118_235842.xlsx
qoe_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sample_data/: .gitkeep  messy_large_gl_test.xlsx  sample_balanced_gl.xlsx  sample_qbd_gl.xlsx  sample_qbo_gl.xlsx
tests/: __init__.py  (+9 more)
(+41 files in other folders)
